--- a/package.json
+++ b/package.json
@@ -6,14 +6,23 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "postinstall": "prisma generate && prisma migrate deploy"
+  },
+  "prisma": {
+    "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
   },
   "dependencies": {
+    "@auth/prisma-adapter": "^2.7.4",
+    "@auth/supabase-adapter": "^1.7.4",
+    "@prisma/client": "^6.0.1",
     "@supabase/supabase-js": "^2.43.1",
     "@tanstack/react-query": "^4.36.1",
     "@tanstack/react-query-devtools": "^4.36.1",
+    "bcrypt": "^5.1.1",
     "date-fns": "^3.6.0",
     "next": "14.2.11",
+    "next-auth": "^4.24.5",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.53.2",
@@ -22,6 +31,7 @@
     "recharts": "^2.13.0-alpha.4"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
@@ -29,7 +39,9 @@
     "eslint-config-next": "14.2.11",
     "postcss": "^8",
     "prettier-plugin-tailwindcss": "^0.6.9",
+    "prisma": "^6.0.1",
     "tailwindcss": "^3.4.1",
+    "ts-node": "^10.9.2",
     "typescript": "^5"
   }
 }
