--- a/package.json
+++ b/package.json
@@ -20,9 +20,10 @@
     "@tanstack/react-query": "^4.36.1",
     "@tanstack/react-query-devtools": "^4.36.1",
     "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
     "date-fns": "^3.6.0",
     "next": "14.2.11",
-    "next-auth": "^4.24.5",
+    "next-auth": "^5.0.0-beta.25",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.53.2",
@@ -32,6 +33,7 @@
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
+    "@types/bcryptjs": "^2.4.6",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
