server is now easier to manage between the files, signup still doesn't work. trying to prtect the frontend routes to not be hit without authorization.

--- a/package.json
+++ b/package.json
@@ -14,15 +14,13 @@
     "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
   },
   "dependencies": {
-    "@auth/prisma-adapter": "^2.7.4",
-    "@auth/supabase-adapter": "^1.7.4",
     "@prisma/client": "^6.0.1",
     "@supabase/supabase-js": "^2.43.1",
     "@tanstack/react-query": "^4.36.1",
     "@tanstack/react-query-devtools": "^4.36.1",
     "axios": "^1.7.9",
-    "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "date-fns": "^3.6.0",
     "dotenv": "^16.4.7",
@@ -30,7 +28,6 @@
     "express-validator": "^7.2.0",
     "jsonwebtoken": "^9.0.2",
     "next": "14.2.11",
-    "next-auth": "^5.0.0-beta.25",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.53.2",
@@ -41,7 +38,6 @@
   "devDependencies": {
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.1.0",
-    "@types/bcrypt": "^5.0.2",
     "@types/bcryptjs": "^2.4.6",
     "@types/jest": "^29.5.14",
     "@types/node": "^20",
